syntax = "proto3";

package distributed;

option go_package = "go.k6.io/k6/execution/distributed";

service DistributedTest {
  rpc Register(RegisterRequest) returns (RegisterResponse) {};

  rpc CommandAndControl(stream AgentMessage)
      returns (stream ControllerMessage) {};
}

message RegisterRequest {}
message RegisterResponse {
  bytes archive = 1; // TODO: send this with a `stream` of bytes chunks
  bytes options = 2;
}

message AgentMessage {}
message ControllerMessage {}